# E2E-sentiment-analysis-pipeline

./: README.md  pyproject.toml
model/: model.pkl  tfidf_vectorizer.pkl
src/: app.py  data_ingestion.ipynb  model_training.ipynb
