[project]
name = "end-to-end-sentiment-analysis-imdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "datasets>=3.2.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "ruff>=0.9.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.37",
]
